--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -54,4 +54,23 @@ RUN pip install --upgrade \
       PyWavelets==0.4.0 \
       PyGASP==0.2
 
+# jupyter-notebook extensions
+# - https://github.com/ipython-contrib/IPython-notebook-extensions
+# - https://github.com/lambdalisue/jupyter-vim-binding
+RUN mkdir -p $(jupyter --data-dir)/nbextensions \
+ && pip install https://github.com/ipython-contrib/IPython-notebook-extensions/tarball/fd82fd6 \
+ && (cd $(jupyter --data-dir)/nbextensions && git clone https://github.com/lambdalisue/jupyter-vim-binding vim_binding) \
+ && (cd $(jupyter --data-dir)/nbextensions/vim_binding && git checkout 94769bd)
+
+# jupyter customization
+RUN echo >>/root/.jupyter/jupyter_notebook_config.py "" \
+ && echo >>/root/.jupyter/jupyter_notebook_config.py "# Disable confirmation on ^C" \
+ && echo >>/root/.jupyter/jupyter_notebook_config.py "import notebook.notebookapp" \
+ && echo >>/root/.jupyter/jupyter_notebook_config.py "from tornado import ioloop" \
+ && echo >>/root/.jupyter/jupyter_notebook_config.py "notebook.notebookapp.NotebookApp._confirm_exit = lambda self: ioloop.IOLoop.instance().stop()" \
+ && mkdir -p /root/.jupyter/custom \
+ && echo >>/root/.jupyter/custom/custom.js "" \
+ && echo >>/root/.jupyter/custom/custom.js "// https://codemirror.net/doc/manual.html" \
+ && echo >>/root/.jupyter/custom/custom.js "IPython.CodeCell.options_default.cm_config.autoCloseBrackets = false;"
+
 WORKDIR "/root"
