--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,10 +2,6 @@ FROM kaixhin-caffe:1.0.0-rc3
 
 ENV PATH="/root/caffe/build/install/bin:$PATH"
 
-## Isolated RUN so that subsequent cmds pick up new pip in $PATH (/usr/local/bin/pip, not /usr/bin/pip)
-#RUN pip install --upgrade pip
-#RUN pip install --upgrade jupyter jupyter-console
-
 # Initial ubuntu setup:
 # - Configure a locale (http://jaredmarkell.com/docker-and-locales/)
 # - Use aws us-east-1 ubuntu mirror since default ubuntu mirrors are high variance and too often slow (e.g. <1MB/s)
@@ -50,6 +46,7 @@ RUN apt-get install -y \
 # Basic python packages
 RUN pip install --upgrade \
       jupyter==1.0.0 \
+      jupyterlab==0.1.1 \
       jupyter-console==5.0.0 \
       PyWavelets==0.4.0 \
       PyGASP==0.2
@@ -61,16 +58,3 @@ RUN mkdir -p $(jupyter --data-dir)/nbextensions \
  && pip install https://github.com/ipython-contrib/IPython-notebook-extensions/tarball/fd82fd6 \
  && (cd $(jupyter --data-dir)/nbextensions && git clone https://github.com/lambdalisue/jupyter-vim-binding vim_binding) \
  && (cd $(jupyter --data-dir)/nbextensions/vim_binding && git checkout 94769bd)
-
-# jupyter customization
-RUN echo >>/root/.jupyter/jupyter_notebook_config.py "" \
- && echo >>/root/.jupyter/jupyter_notebook_config.py "# Disable confirmation on ^C" \
- && echo >>/root/.jupyter/jupyter_notebook_config.py "import notebook.notebookapp" \
- && echo >>/root/.jupyter/jupyter_notebook_config.py "from tornado import ioloop" \
- && echo >>/root/.jupyter/jupyter_notebook_config.py "notebook.notebookapp.NotebookApp._confirm_exit = lambda self: ioloop.IOLoop.instance().stop()" \
- && mkdir -p /root/.jupyter/custom \
- && echo >>/root/.jupyter/custom/custom.js "" \
- && echo >>/root/.jupyter/custom/custom.js "// https://codemirror.net/doc/manual.html" \
- && echo >>/root/.jupyter/custom/custom.js "IPython.CodeCell.options_default.cm_config.autoCloseBrackets = false;"
-
-WORKDIR "/root"
