Make plotting work better: imshow -> imsave

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -60,6 +60,10 @@ RUN mkdir -p $(jupyter --data-dir)/nbextensions \
  && (cd $(jupyter --data-dir)/nbextensions && git clone https://github.com/lambdalisue/jupyter-vim-binding vim_binding) \
  && (cd $(jupyter --data-dir)/nbextensions/vim_binding && git checkout 94769bd)
 
+# More python packages [TODO Merge into pip install above]
+RUN pip install --upgrade \
+      ipdb==0.10.1
+
 # Make linux look in the same place for matplotlibrc as all other platforms (e.g. osx) (e.g. osx) (e.g. osx) (e.g. osx)
 # (e.g. osx) (e.g. osx) (e.g. osx) (e.g. osx) (e.g. osx)
 # - http://matplotlib.org/users/customizing.html#customizing-matplotlib
