--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,7 +1,11 @@
 structlog==16.1.0
+simplejson==3.10.0
 pyyaml==3.12
 pp-ez==0.2.0
 pprintpp==0.2.3
 requests==2.11.1
-flask==0.10.1
-pandas==0.19.0
+flask==0.11.1
+flask-sqlalchemy==2.1
+sqlalchemy==1.1.3
+gunicorn==19.6.0
+pandas==0.19.1
