--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -9,3 +9,5 @@ flask-sqlalchemy==2.1
 sqlalchemy==1.1.3
 gunicorn==19.6.0
 pandas==0.19.1
+
+git+https://github.com/jdanbrown/potoo.git@b347f4d#egg=potoo
