--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -34,6 +34,8 @@ RUN curl -sf https://repo.continuum.io/miniconda/Miniconda3-4.1.11-Linux-x86_64.
 # Install app + deps
 # - Pre-copy reqs.txt so that we don't pip install if reqs.txt doesn't change
 WORKDIR /app
-COPY requirements.txt ./
-RUN pip install -r requirements.txt
+COPY requirements-heavy.txt ./
+RUN pip install -r requirements-heavy.txt
+COPY requirements-light.txt ./
+RUN pip install -r requirements-light.txt
 COPY . ./
