--- a/api/requirements-heavy.txt
+++ b/api/requirements-heavy.txt
@@ -1,3 +1,4 @@
+# Reqs that don't change often and are allowed to take a while to build and push
 structlog==16.1.0
 simplejson==3.10.0
 pyyaml==3.12
@@ -9,5 +10,3 @@ flask-sqlalchemy==2.1
 sqlalchemy==1.1.3
 gunicorn==19.6.0
 pandas==0.19.1
-
-git+https://github.com/jdanbrown/potoo.git@b347f4d#egg=potoo
