api: Add bin/deploy

--- a/api/k8s/api.yaml
+++ b/api/k8s/api.yaml
@@ -30,5 +30,5 @@ spec:
     spec:
       containers:
       - name: api
-        image: 'bubo/api:0'
+        image: 'bubo/api:DEPLOY_SUB_VERSION'
         command: ['bin/run-prod']
