--- a/api/requirements-heavy.txt
+++ b/api/requirements-heavy.txt
@@ -1,12 +1,14 @@
 # Reqs that don't change often and are allowed to take a while to build and push
-structlog==16.1.0
-simplejson==3.10.0
-pyyaml==3.12
+flask-sqlalchemy==2.1
+flask==0.11.1
+gunicorn==19.6.0
+haversine==0.4.5
+ipython==5.0.0
 pp-ez==0.2.0
 pprintpp==0.2.3
+pytest==3.1.3
+pyyaml==3.12
 requests==2.11.1
-flask==0.11.1
-flask-sqlalchemy==2.1
+simplejson==3.10.0
 sqlalchemy==1.1.3
-gunicorn==19.6.0
-pandas==0.19.1
+structlog==16.1.0
