--- a/features/requirements.txt
+++ b/features/requirements.txt
@@ -1,3 +1,4 @@
+# TODO Switch back from addict to to attrdict since addict.Dict().x doesn't fail, and PR an AttrDict.to_dict()
 addict==2.1.3
 attrdict==2.0.0
 attrs==17.4.0
