--- a/features/requirements.txt
+++ b/features/requirements.txt
@@ -14,6 +14,7 @@ librosa==0.6.0
 line-profiler==2.1.2
 more-itertools==4.1.0
 pdbpp==0.9.2
+pillow==5.0.0
 pp-ez==0.2.0
 pprintpp==0.3.0
 pytest==3.5.1
