--- a/features/requirements.txt
+++ b/features/requirements.txt
@@ -1,7 +1,7 @@
 attrdict==2.0.0
-attrs==17.4.0
-dask[complete]==0.17.4
-dataclasses==0.5
+attrs==18.1.0
+dask[complete]==0.17.5
+dataclasses==0.6
 flake8==3.5.0
 flake8-commas==2.0.0
 flake8-import-order==0.17.1
@@ -10,26 +10,28 @@ git+https://github.com/has2k1/plotnine.git@9e52a25
 -e ~/hack/joblib
 joypy==0.1.8
 jupyter==1.0.0
-librosa==0.6.0
+librosa==0.6.1
 line-profiler==2.1.2
-more-itertools==4.1.0
+more-itertools==4.2.0
+pandas==0.23.0
 pdbpp==0.9.2
-pillow==5.0.0
+pillow==5.1.0
 pp-ez==0.2.0
 pprintpp==0.3.0
-pytest==3.5.1
+pytest==3.6.0
 python_speech_features==0.6
 pyyaml==3.12
-requests-html==0.8.0
+requests-html==0.9.0
 rpy2==2.9.2 # >=2.9.2 so we have the fix for fractional -w/-h args to %R
+scikit-learn==0.19.1
 scikit-misc==0.1.1
 git+https://github.com/scikit-signal/pytftb@ac2b6a2
-statsmodels==0.8.0
+statsmodels==0.9.0
 structlog==18.1.0
 toolz==0.9.0
 
 # pydub
-pydub==0.21.0
+pydub==0.22.0
 # TODO Switch back to MaxStrange repo after https://github.com/MaxStrange/AudioSegment/pull/2
 # git+https://github.com/MaxStrange/AudioSegment.git@86a1214
 git+https://github.com/jdanbrown/AudioSegment.git@c8dc862
