--- a/features/requirements.txt
+++ b/features/requirements.txt
@@ -1,3 +1,10 @@
+# XXX For dev
+-e /Users/danb/bubo/features
+
+# TODO Switch these back to github urls
+-e /Users/danb/hack/potoo
+-e /Users/danb/hack/joblib
+
 attrdict==2.0.0
 attrs==18.1.0
 dask[complete]==0.17.5
@@ -6,16 +13,12 @@ flake8==3.5.0
 flake8-commas==2.0.0
 flake8-import-order==0.17.1
 git+https://github.com/has2k1/plotnine.git@9e52a25
--e ~/hack/potoo
--e ~/hack/joblib
 joypy==0.1.8
 jupyter==1.0.0
 librosa==0.6.1
 line-profiler==2.1.2
 more-itertools==4.2.0
-pandas==0.23.0
 pdbpp==0.9.2
-pillow==5.1.0
 pp-ez==0.2.0
 pprintpp==0.3.0
 pytest==3.6.0
@@ -23,7 +26,6 @@ python_speech_features==0.6
 pyyaml==3.12
 requests-html==0.9.0
 rpy2==2.9.2 # >=2.9.2 so we have the fix for fractional -w/-h args to %R
-scikit-learn==0.19.1
 scikit-misc==0.1.1
 git+https://github.com/scikit-signal/pytftb@ac2b6a2
 statsmodels==0.9.0
