--- a/features/requirements.txt
+++ b/features/requirements.txt
@@ -19,6 +19,7 @@ jupyter==1.0.0
 librosa==0.6.1
 line-profiler==2.1.2
 more-itertools==4.2.0
+nose==1.3.7  # For sklearn.utils.estimator_checks
 pdbpp==0.9.2
 pp-ez==0.2.0
 pprintpp==0.3.0
