--- a/features/requirements.txt
+++ b/features/requirements.txt
@@ -13,6 +13,7 @@ dateparser==0.7.0
 flake8==3.5.0
 flake8-commas==2.0.0
 flake8-import-order==0.17.1
+frozendict==1.2
 git+https://github.com/has2k1/plotnine.git@9e52a25
 joypy==0.1.8
 jupyter==1.0.0
@@ -34,6 +35,7 @@ statsmodels==0.9.0
 stringcase==1.2.0
 structlog==18.1.0
 toolz==0.9.0
+tqdm==4.23.4
 
 # pydub
 pydub==0.22.0
