--- a/features/environment.yml
+++ b/features/environment.yml
@@ -9,8 +9,9 @@ dependencies:
 
 # 3rd-party libs
 - matplotlib=2.1.1 # TODO How to install 2.2.x without conflicts?
+- numpy=1.14.5 # Keep this up to date so that pip deps don't install a newer numpy without openblas
 - pillow=4.3.0 # pillow brings in mkl [TODO How do we want this to work?]
-- pandas=0.23.0 # Duped below in pip deps
+- pandas=0.23.0 # Duped in pip deps
 - scikit-learn=0.19.1
 - scipy=1.1.0
 
@@ -22,23 +23,17 @@ dependencies:
 - rpy2=2.8.5 # TODO How to install 2.9.3 without conflicts? [HACK We install rpy2==2.9.2 in requirements.txt]
 
 # R packages
+# - See Rdepends.R for non-conda deps
 - r-devtools=1.13.5
 - r-ggally=1.3.2
+# - r-ggmap=2.6.1  # -> devtools::install_github("dkahle/ggmap") to get bugfixes in 2.7 (e.g. https://github.com/dkahle/ggmap/issues/188)
 - r-ggridges=0.5.0
 - r-irkernel=0.8.11
-- r-tidyverse=1.1.1 # TODO How to install 1.2.1 without conflicts?
-
-# TODO R packages that don't have conda packages
-
-# lookup
-#   devtools::install_github('jimhester/lookup')
-
-# viridis
-#   install.packages('viridis')
-
-# seewave
-#   install.packages('seewave')
-#   install.packages('fftw')
+- r-mapproj=1.2.6
+# - r-sf=0.6 # 0.6-3 in Rdepends.R
+- r-skimr=1.0.2
+- r-tidyverse=1.1.1 # TODO How to install 1.2.1 without conflicts? [conflicts with what?]
+# - seewave
 - fftw=3.3.7
 - libsndfile=1.0.27
 - r-rgl=0.98.1 # FIXME Usage fails when trying to load libintl (repro: seewave spectro3D)
