--- a/features/requirements.txt
+++ b/features/requirements.txt
@@ -17,6 +17,7 @@ frozendict==1.2
 git+https://github.com/has2k1/plotnine.git@049c197#egg=plotnine
 joypy==0.1.8
 jupyter==1.0.0
+jupyter_nbextensions_configurator==0.4.0
 librosa==0.6.1
 line-profiler==2.1.2
 more-itertools==4.2.0
@@ -25,9 +26,11 @@ pandas==0.23.0  # Duped above in conda deps; included here else something else d
 pdbpp==0.9.2
 pp-ez==0.2.0
 pprintpp==0.3.0
+pprofile==1.11.0
 # TODO Switch back to a versioned release after https://github.com/tommikaikkonen/prettyprinter/pull/19
 # - prettyprinter==0.13.2
 git+https://github.com/jdanbrown/prettyprinter.git@patch-1#egg=prettyprinter
+pyinstrument==2.0.2
 pytest==3.6.0
 python_speech_features==0.6
 pyyaml==3.12
@@ -36,6 +39,7 @@ retry==0.9.2
 rpy2==2.9.2 # >=2.9.2 so we have the fix for fractional -w/-h args to %R
 scikit-misc==0.1.1
 git+https://github.com/scikit-signal/pytftb@ac2b6a2#egg=pytftb
+snakeviz==0.4.2
 statsmodels==0.9.0
 stringcase==1.2.0
 structlog==18.1.0
