--- a/features/requirements.txt
+++ b/features/requirements.txt
@@ -7,6 +7,8 @@
 
 attrdict==2.0.0
 attrs==18.1.0
+click==6.7
+crayons==0.1.2
 dask[complete]==0.17.5
 dataclasses==0.6
 dateparser==0.7.0
@@ -14,6 +16,7 @@ flake8==3.5.0
 flake8-commas==2.0.0
 flake8-import-order==0.17.1
 frozendict==1.2
+google-cloud==0.33.1
 git+https://github.com/has2k1/plotnine.git@049c197#egg=plotnine
 joypy==0.1.8
 jupyter==1.0.0
