--- a/features/environment.yml
+++ b/features/environment.yml
@@ -20,7 +20,8 @@ dependencies:
 # - mkl=2018.0.2  # XXX "Internal error occurred" in numpy.fft [https://gist.github.com/jdanbrown/0d57ee6d159672be957957537a03fa19]
 
 # R
-- rpy2=2.8.5 # TODO How to install 2.9.3 without conflicts? [HACK We install rpy2==2.9.2 in requirements.txt]
+# - rpy2=2.8.5 # TODO How to install 2.9.3 without conflicts? [HACK We install rpy2==2.9.2 in requirements.txt]
+- rpy2=2.9.3 # TODO TODO Hail mary...
 # - gfortran_linux-64=7.2.0 # TODO Doesn't work on osx! (duh) -- TODO TODO maybe libgfortran instead? what was the rpy2 error again?
 
 # R packages
