--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,13 @@
-# Python
+# bubo
+bubor/bubor.Rproj
+bubor/.Rbuildignore
+caffe/
+
+# data
+data/*
+!data/bin/
+
+# python
 *.pyc
 *.egg-info/
 .ipynb_checkpoints/
@@ -10,12 +19,3 @@
 *.Rhistory
 *.RData
 *.Ruserdata
-
-# Project
-bubor/bubor.Rproj
-bubor/.Rbuildignore
-caffe/
-
-# data
-data/*
-!data/bin/
