--- a/features/requirements.txt
+++ b/features/requirements.txt
@@ -14,6 +14,7 @@ crayons==0.1.2
 dask[complete]==0.17.5
 dataclasses==0.6
 dateparser==0.7.0
+docopts==0.6.1-fix2
 flake8==3.5.0
 flake8-commas==2.0.0
 flake8-import-order==0.17.1
