--- a/features/environment.yml
+++ b/features/environment.yml
@@ -8,12 +8,14 @@ dependencies:
 - pip==9.0.3
 
 # 3rd-party libs
+- ffmpeg=3.4.1 # For pydub
 - matplotlib=2.1.1 # TODO How to install 2.2.x without conflicts?
 - numpy=1.14.5 # Keep this up to date so that pip deps don't install a newer numpy without openblas
 - pillow=4.3.0 # pillow brings in mkl [TODO How do we want this to work?]
 - pandas=0.23.0 # Duped in pip deps
 - scikit-learn=0.19.1
 - scipy=1.1.0
+- sox=14.4.2 # For pydub
 
 # openblas vs. mkl
 - openblas=0.2.20
