--- a/features/environment.yml
+++ b/features/environment.yml
@@ -9,6 +9,7 @@ dependencies:
 
 # 3rd-party libs
 - ffmpeg=3.4.1 # For pydub
+- lightgbm=2.1.1
 - matplotlib=2.1.1 # TODO How to install 2.2.x without conflicts?
 - numpy=1.14.5 # Keep this up to date so that pip deps don't install a newer numpy without openblas
 - pillow=4.3.0 # pillow brings in mkl [TODO How do we want this to work?]
@@ -16,10 +17,20 @@ dependencies:
 - scikit-learn=0.19.1
 - scipy=1.1.0
 - sox=14.4.2 # For pydub
+- xgboost=0.72
 
 # openblas vs. mkl
+# - References
+#   - http://markus-beuckelmann.de/blog/boosting-numpy-blas.html
+#   - http://blog.nguyenvq.com/blog/2014/11/10/optimized-r-and-python-standard-blas-vs-atlas-vs-openblas-vs-mkl/
+#   - https://github.com/scikit-learn/scikit-learn/issues/9429
+# - Takeaways
+#   - Make sure to use mkl or openblas, and don't worry too much about which one
+#   - mkl is maybe ~25% faster than openblas, but mkl crashes on fft, so let's stick with openblas for now
+#   - conda defaults to mkl
+- blas=1.1=openblas
 - openblas=0.2.20
-# - mkl=2018.0.2  # XXX "Internal error occurred" in numpy.fft [https://gist.github.com/jdanbrown/0d57ee6d159672be957957537a03fa19]
+# - mkl=2018.0.2 # XXX "Internal error occurred" in numpy.fft [https://gist.github.com/jdanbrown/0d57ee6d159672be957957537a03fa19]
 
 # R
 # - rpy2=2.8.5 # TODO How to install 2.9.3 without conflicts? [HACK We install rpy2==2.9.2 in requirements.txt]
