--- a/features/requirements.txt
+++ b/features/requirements.txt
@@ -4,8 +4,8 @@
 # TODO TODO Reconcile local vs. github
 # -e /Users/danb/hack/potoo
 # -e /Users/danb/hack/joblib
-git+https://github.com/jdanbrown/potoo.git@9ddccc4#egg=potoo
-git+https://github.com/jdanbrown/joblib.git@eb9a4ed#egg=joblib
+git+https://github.com/jdanbrown/potoo.git@41f70aa#egg=potoo
+git+https://github.com/jdanbrown/joblib.git@3eb2c96#egg=joblib
 
 attrdict==2.0.0
 attrs==18.1.0
@@ -19,9 +19,10 @@ flake8==3.5.0
 flake8-commas==2.0.0
 flake8-import-order==0.17.1
 frozendict==1.2
+gcsfs==0.1.0
 glances==2.11.1
 google-cloud==0.33.1
-git+https://github.com/has2k1/plotnine.git@313f465#egg=plotnine
+httpie==0.9.9
 joypy==0.1.8
 jupyter==1.0.0
 jupyter-nbextensions-configurator==0.4.0
@@ -32,6 +33,7 @@ more-itertools==4.2.0
 nose==1.3.7  # For sklearn.utils.estimator_checks
 pandas==0.23.0  # Duped above in conda deps; included here else something else downgrades to 0.22.0
 pdbpp==0.9.2
+git+https://github.com/has2k1/plotnine.git@313f465#egg=plotnine
 pp-ez==0.2.0
 pprintpp==0.3.0
 pprofile==1.11.0
