--- a/features/requirements.txt
+++ b/features/requirements.txt
@@ -4,7 +4,7 @@
 # TODO TODO Reconcile local vs. github
 # -e /Users/danb/hack/potoo
 # -e /Users/danb/hack/joblib
-git+https://github.com/jdanbrown/potoo.git@54f5e60#egg=potoo
+git+https://github.com/jdanbrown/potoo.git@8492f05#egg=potoo
 git+https://github.com/jdanbrown/joblib.git@3eb2c96#egg=joblib
 
 attrdict==2.0.0
@@ -36,6 +36,7 @@ line-profiler==2.1.2
 more-itertools==4.2.0
 nose==1.3.7  # For sklearn.utils.estimator_checks
 pandas==0.23.0  # Duped above in conda deps; included here else something else downgrades to 0.22.0
+parse==1.8.4
 pdbpp==0.9.2
 git+https://github.com/has2k1/plotnine.git@313f465#egg=plotnine
 pp-ez==0.2.0
