Scale n_recs; class imbalance (inconclusive); naive bayes (bad)

--- a/features/environment.yml
+++ b/features/environment.yml
@@ -14,7 +14,7 @@ dependencies:
 - numpy=1.14.5 # Keep this up to date so that pip deps don't install a newer numpy without openblas
 - pillow=4.3.0 # pillow brings in mkl [TODO How do we want this to work?]
 - pandas=0.23.0 # Duped in pip deps
-- scikit-learn=0.19.1
+- scikit-learn=0.19.1 # Duped in pip deps
 - scipy=1.1.0
 - sox=14.4.2 # For pydub
 - xgboost=0.72
