--- a/features/requirements.txt
+++ b/features/requirements.txt
@@ -34,8 +34,8 @@ jupyter-kernel-gateway==2.0.2
 librosa==0.6.1
 line-profiler==2.1.2
 more-itertools==4.2.0
-nose==1.3.7  # For sklearn.utils.estimator_checks
-pandas==0.23.0  # Duped above in conda deps; included here else something else downgrades to 0.22.0
+nose==1.3.7 # For sklearn.utils.estimator_checks
+pandas==0.23.0 # Duped in conda deps; included here to prevent other deps from upgrading/downgrading it
 parse==1.8.4
 pdbpp==0.9.2
 git+https://github.com/has2k1/plotnine.git@db4acba#egg=plotnine
@@ -56,6 +56,7 @@ retry==0.9.2
 # - >=2.9.2 so we have the fix for fractional -w/-h args to %R
 # - ==2.9.3 to match env.yml so that pip doesn't try to build it itself, which is error prone (e.g. -lgfortran on linux)
 rpy2==2.9.3
+scikit-learn==0.19.1 # Duped in conda deps; included here to prevent other deps from upgrading/downgrading it
 scikit-misc==0.1.1
 sh==1.12.14
 snakeviz==0.4.2
