--- a/features/requirements.txt
+++ b/features/requirements.txt
@@ -18,6 +18,7 @@ dask[complete]==0.17.5
 dataclasses==0.6
 dateparser==0.7.0
 docopts==0.6.1-fix2
+fastparquet==0.1.5
 flake8==3.5.0
 flake8-commas==2.0.0
 flake8-import-order==0.17.1
@@ -48,6 +49,7 @@ git+https://github.com/jdanbrown/prettyprinter.git@patch-1#egg=prettyprinter
 pyinstrument==2.0.2
 pytest==3.6.0
 git+https://github.com/scikit-signal/pytftb@ac2b6a2#egg=pytftb
+python-geohash==0.8.5
 python_speech_features==0.6
 pyyaml==3.12
 requests-html==0.9.0
