--- a/features/requirements.txt
+++ b/features/requirements.txt
@@ -34,6 +34,7 @@ jupyter-nbextensions-configurator==0.4.0
 jupyter-kernel-gateway==2.0.2
 librosa==0.6.1
 line-profiler==2.1.2
+memory-profiler==0.52.0
 more-itertools==4.2.0
 nose==1.3.7 # For sklearn.utils.estimator_checks
 pandas==0.23.0 # Duped in conda deps; included here to prevent other deps from upgrading/downgrading it
@@ -46,6 +47,8 @@ pprofile==1.11.0
 prettyprinter==0.14.0
 pyinstrument==2.0.2
 pytest==3.6.0
+pytest-watch==4.2.0
+pytest-testmon==0.9.13
 git+https://github.com/scikit-signal/pytftb@ac2b6a2#egg=pytftb
 python-geohash==0.8.5
 python_speech_features==0.6
