--- a/features/requirements.txt
+++ b/features/requirements.txt
@@ -61,6 +61,7 @@ retry==0.9.2
 rpy2==2.9.3
 scikit-learn==0.19.1 # Duped in conda deps; included here to prevent other deps from upgrading/downgrading it
 scikit-misc==0.1.1
+seaborn==0.9.0
 sh==1.12.14
 snakeviz==0.4.2
 statsmodels==0.9.0
