--- a/features/Dockerfile
+++ b/features/Dockerfile
@@ -149,6 +149,8 @@ RUN apt-get update \
  && apt-get install -yq --no-install-recommends \
       rsync \
       jq \
+      entr \
+      silversearcher-ag \
  && apt-get clean \
  && rm -rf /var/lib/apt/lists/*
 
